--- a/examples/air-quality-sensor-app/silabs/build_for_wifi_args.gni
+++ b/examples/air-quality-sensor-app/silabs/build_for_wifi_args.gni
@@ -16,7 +16,19 @@ import("${chip_root}/config/standalone/args.gni")
 
 silabs_sdk_target = get_label_info(":sdk", "label_no_toolchain")
 import("${chip_root}/src/platform/silabs/wifi/args.gni")
-chip_enable_wifi = true
+chip_enable_openthread = false
 chip_enable_ota_requestor = true
 app_data_model =
     "${chip_root}/examples/air-quality-sensor-app/air-quality-sensor-common"
+
+sl_enable_test_event_trigger = true
+
+# ICD Default configurations
+chip_enable_icd_server = true
+chip_subscription_timeout_resumption = false
+sl_use_subscription_syncing = true
+
+# ICD Matter Configuration flags
+sl_idle_mode_duration_s = 600  # 10min Idle Mode Duration
+sl_active_mode_duration_ms = 10000  # 10s Active Mode Duration
+sl_active_mode_threshold_ms = 1000  # 1s Active Mode Threshold
