--- a/examples/air-quality-sensor-app/silabs/openthread.gni
+++ b/examples/air-quality-sensor-app/silabs/openthread.gni
@@ -30,17 +30,14 @@ sl_enable_test_event_trigger = true
 
 # ICD Default configurations
 chip_enable_icd_server = true
-chip_enable_icd_lit = true
-chip_enable_icd_dsls = true
-
 chip_subscription_timeout_resumption = false
 sl_use_subscription_syncing = true
 
 # Openthread Configuration flags
-sl_transport_idle_interval_ms = 2100000  # 35 minutes Idle Intervals
-sl_transport_active_interval_ms = 1000  # 1000ms Active Intervals
+sl_transport_idle_interval_ms = 5000  # 5s Idle Intervals
+sl_transport_active_interval_ms = 500  # 500ms Active Intervals
 
 # ICD Matter Configuration flags
-sl_idle_mode_duration_s = 1800  # 30min Idle Mode Duration
-sl_active_mode_duration_ms = 0  # 0s Active Mode Duration
-sl_active_mode_threshold_ms = 5000  # 5s Active Mode Threshold
+sl_idle_mode_duration_s = 600  # 10min Idle Mode Duration
+sl_active_mode_duration_ms = 10000  # 10s Active Mode Duration
+sl_active_mode_threshold_ms = 1000  # 1s Active Mode Threshold
