--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -52,4 +52,8 @@ static_library("chip_webrtc") {
     "ssl",
     "crypto",
   ]
+  
+  if (host_os == "mac") {
+    cflags = [ "-Wno-implicit-int-conversion", "-Wno-conversion" ]
+  }
 }
