--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -52,7 +52,8 @@ static_library("chip_webrtc") {
     "ssl",
     "crypto",
   ]
-  
+
+  # suppress known `libdatachannel` int conversion issues on darwin builds
   if (host_os == "mac") {
     cflags = [ "-Wno-implicit-int-conversion", "-Wno-conversion" ]
   }
