suppress known `libdatachannel` int conversion issues on all platforms

--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -53,11 +53,6 @@ static_library("chip_webrtc") {
     "crypto",
   ]
 
-  # suppress known `libdatachannel` int conversion issues on darwin builds
-  if (host_os == "mac") {
-    cflags = [
-      "-Wno-implicit-int-conversion",
-      "-Wno-conversion",
-    ]
-  }
+  # suppress known `libdatachannel` int conversion issues
+  cflags_cc = [ "-Wno-implicit-int-conversion" ]
 }
