match other suppressions by using `cflags`

--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -54,5 +54,5 @@ static_library("chip_webrtc") {
   ]
 
   # suppress known `libdatachannel` int conversion issues
-  cflags_cc = [ "-Wno-implicit-int-conversion" ]
+  cflags = [ "-Wno-implicit-int-conversion" ]
 }
