--- a/examples/air-quality-sensor-app/silabs/build_for_wifi_args.gni
+++ b/examples/air-quality-sensor-app/silabs/build_for_wifi_args.gni
@@ -27,8 +27,10 @@ sl_enable_test_event_trigger = true
 chip_enable_icd_server = true
 chip_subscription_timeout_resumption = false
 sl_use_subscription_syncing = true
+chip_enable_icd_lit = true
+chip_enable_icd_dsls = true
 
 # ICD Matter Configuration flags
-sl_idle_mode_duration_s = 600  # 10min Idle Mode Duration
-sl_active_mode_duration_ms = 10000  # 10s Active Mode Duration
-sl_active_mode_threshold_ms = 1000  # 1s Active Mode Threshold
+sl_idle_mode_duration_s = 1800  # 30min Idle Mode Duration
+sl_active_mode_duration_ms = 0  # 0s Active Mode Duration
+sl_active_mode_threshold_ms = 5000  # 5s Active Mode Threshold
