--- a/src/app/tests/suites/certification/Test_TC_DD_3_24.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DD_3_24.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name:
-    [TC-DD-3.24] NFC-based commissioning [DUT as Commissionee]
+    3.3.24 [TC-DD-3.24] NFC-based commissioning [DUT as Commissionee]
 
 PICS:
     - MCORE.ROLE.COMMISSIONER
