--- a/.github/workflows/chef.yaml
+++ b/.github/workflows/chef.yaml
@@ -90,9 +90,24 @@ jobs:
                   ./examples/chef/chef.py -br -d rootnode_dimmablelight_bCwGYSDpoe -t linux
                   scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_dimmablelight_bCwGYSDpoe --factory-reset --script ./examples/chef/tests/dimmablelight_test.py --script-args "--commissioning-method on-network --discriminator 3840 --passcode 20202021" --app-stdin-pipe /tmp/chef_stdin.txt'
 
-            - name: Dimmablelight tests (Again)
+            - name: Dimmablelight tests (1)
               run: |
-                  ./examples/chef/chef.py -b -d rootnode_dimmablelight_bCwGYSDpoe -t linux
+                  ./examples/chef/chef.py -br -d rootnode_dimmablelight_bCwGYSDpoe -t linux
+                  scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_dimmablelight_bCwGYSDpoe --factory-reset --script ./examples/chef/tests/dimmablelight_test.py --script-args "--commissioning-method on-network --discriminator 3840 --passcode 20202021" --app-stdin-pipe /tmp/chef_stdin.txt'
+
+            - name: Dimmablelight tests (2)
+              run: |
+                  ./examples/chef/chef.py -br -d rootnode_dimmablelight_bCwGYSDpoe -t linux
+                  scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_dimmablelight_bCwGYSDpoe --factory-reset --script ./examples/chef/tests/dimmablelight_test.py --script-args "--commissioning-method on-network --discriminator 3840 --passcode 20202021" --app-stdin-pipe /tmp/chef_stdin.txt'
+
+            - name: Dimmablelight tests (3)
+              run: |
+                  ./examples/chef/chef.py -br -d rootnode_dimmablelight_bCwGYSDpoe -t linux
+                  scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_dimmablelight_bCwGYSDpoe --factory-reset --script ./examples/chef/tests/dimmablelight_test.py --script-args "--commissioning-method on-network --discriminator 3840 --passcode 20202021" --app-stdin-pipe /tmp/chef_stdin.txt'
+
+            - name: Dimmablelight tests (4)
+              run: |
+                  ./examples/chef/chef.py -br -d rootnode_dimmablelight_bCwGYSDpoe -t linux
                   scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_dimmablelight_bCwGYSDpoe --factory-reset --script ./examples/chef/tests/dimmablelight_test.py --script-args "--commissioning-method on-network --discriminator 3840 --passcode 20202021" --app-stdin-pipe /tmp/chef_stdin.txt'
 
     chef_esp32:
