--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -20,7 +20,7 @@ not_automated:
     - name: TC_CNET_4_22.py
       reason: It has no CI execution block, is not executed in CI
     - name: TC_CNET_4_23.py
-      reason: It has no CI execution block, is not executed in CI
+      reason: test requires a real wifi and thread network connection, which is not available in the CI
     - name: TC_DGGEN_3_2.py
       reason:
           src/python_testing/test_testing/test_TC_DGGEN_3_2.py is the Unit test
